New UI for Index,Job & Reg Implemented. Data scrapping working in jobs portal

--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -4,3 +4,17 @@
     width: 100%;
     height: 100vh;
 }
+
+/* Registration dividers */
+
+#part2{
+    display: none;
+}
+
+#part3{
+    display: none;
+}
+
+footer{
+ 
+}
