--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title>Login : CareerPilot </title>
 </head>
 <body>
 
-    {{>header}}
+    {{>header2}}
+
+    <div class="section-container">
+        <div class="sec-left">
+
+        </div>
+
+        <div class="sec-right">
+            
+        </div>
+    </div>
+
+
+    {{footer2}}
     
 </body>
 </html>
