--- a/templates/views/reg2.hbs
+++ b/templates/views/reg2.hbs
@@ -14,7 +14,7 @@
 
   {{!-- Registration section --}}
 
-  <div class="reg-container">
+  <div class="section-container">
 
     {{!-- Leftmost image section --}}
 
