--- a/templates/views/certifications2.hbs
+++ b/templates/views/certifications2.hbs
@@ -1,11 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta2}}
+    <link rel="stylesheet" href="/css/certifications.css">
     <title>Certifications : Home Page</title>
 </head>
+
 <body>
     {{>header2}}
-    
+
+    <main>
+
+        <div class="cert-hero">
+
+            <h1 class="cover-title"> Certifications </h1>
+
+            <p class="cover-para" style="text-align: center!important;">Explore Endless Opportunities: Your Gateway to
+                Career Success </p>
+
+            <div class="job-search">
+                <form class="form-control" action="/courses" method="POST">
+                    <input type="text" name="courseKeyword" id="courseKeyword" placeholder="Looking for? ">
+                    <button class="btn" type="submit"> Search Certifications </button>
+                    <button class="btn" onfocus="this.value='' "> Clear </button>
+                </form>
+            </div>
+        
+        </div>
+
+        
+        {{!-- Result container. Filters + Results --}}
+
+        <div class="result-container">
+
+            {{!-- Filters section --}}
+
+            <div class="filters">
+
+                <div class="filter-cat">
+                    <h4 class="section-title"> Top Services </h4>
+                    Show/Hide JobRapido Posting <input type="checkbox"> <br>
+                    Show/Hide LinkedIn Posting<input type="checkbox"> <br>
+
+
+                </div>
+
+                <div class="filter-cat">
+                    <h4 class="section-title"> Top Locations </h4>
+                    Work from office <input type="checkbox"> <br>
+                    Hybrid <input type="checkbox"> <br>
+                    Remote/WFH <input type="checkbox"> <br>
+
+                </div>
+
+                <div class="filter-cat">
+                    <h4 class="section-title"> Top Salary </h4>
+
+                </div>
+
+
+            </div>
+
+            {{!-- Results --}}
+
+            <div class="results">
+
+                 {{#each w3Courses}}
+
+                <div class="result-box">
+                    <span> Course Name : {{this.title}}</span><br>
+                    <span> Job Title : {{this.price}} </span><br>
+                    <span> Start Date : </span><br>
+                    <span>  Duration : </span><br>
+                    {{this.image}}
+                    <button class="btn"> View </button>
+                </div>
+
+                {{/each}}
+
+                {{!-- {{#each linkedinData}}
+
+                <div class="result-box">
+                    <span> Company Name : {{this.company}}</span><br>
+                    <span> Job Title : {{this.title}} </span><br>
+                    <span> Start Date : </span><br>
+                    <span> Internship Duration : </span><br>
+                    <span> Start Date : {{this.listDate}}</span><br>
+                    <span> Internship Location : {{this.location}}</span>
+                    <button class="btn"> View </button>
+                </div>
+
+                {{/each}} --}}
+
+            </div>
+
+        </div>
+
+
+    </main>
+
+    {{footer2}}
+
 </body>
+
 </html>
