Compression added, New UI For Internship,Courses, Home & Reg Implemented

--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -50,6 +50,8 @@
                     <option value="nagaland">Nagaland</option>
                     <option value="audi">Andaman and Nicobar Islands</option>
                     <option value="odisha">Odisha</option>
+                    <option value="odisha">Odisha</option>
+                    <option value="odisha">Odisha</option>
                 </select>
 
                 <button class="btn" type="submit"> Search </button>
