--- a/templates/views/lockedout.hbs
+++ b/templates/views/lockedout.hbs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title> Warning </title>
 </head>
 <body>
-{{>header}}
+{{>header2}}
     
-<h1 class="section-titles index-para"> You have been Locked Out </h1>
+<h1 class="section-titles" style="text-align: center"> You have been Locked Out </h1>
 <p class="index-para"> You are trying too often, Please Try again after sometime</p>
 <center>
 
@@ -15,6 +15,8 @@
 
 <br> <button class="btn"><a href="/"> Go back to Home Page</a></button>
 </center>
+
+{{>footer2}}
 </body>
 </html>
 
