--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta2}}
+    <link rel="stylesheet" href="/css/login2.css">
     <title>Login : CareerPilot </title>
 </head>
+
 <body>
 
     {{>header2}}
@@ -11,15 +14,33 @@
     <div class="section-container">
         <div class="sec-left">
 
+            <img src="/img/login.png" height="100%" width="100%" alt="Login">
+
         </div>
 
         <div class="sec-right">
-            
+            <center>
+            <form method="POST" action="/login">
+
+                <label> Email Id </label><br>
+                <input type="text" placeholder="Enter your email Id" id="email" name="email"><br>
+
+                <label> Password </label><br>
+                <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
+                <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
+                <a href="/forgotpassword"> Forgot Password? Click Here!</a>
+
+                <button class="btn g-recaptcha" id="login" type="submit"> Login </button><br>
+
+            </form>
+
+</center>
         </div>
     </div>
 
 
     {{footer2}}
-    
+
 </body>
+
 </html>
