Login UI Added, New UI For Internship,Courses, Home & Reg Implemented

--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -5,7 +5,7 @@
     <title> Contact Us : CareerPilot</title>
 </head>
 <body>
-    {{>header}}
+    {{>header2}}
 
     <h1 class="section-titles"> Contact Us </h1>
     <p class="section-para index-para">
