--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -10,10 +10,10 @@
         <h4> Company </h4>
         <ul>
             <li><a href="">Certifications</a></li>
-            <li><a href="">Internships</a></li>
-            <li><a href="">Jobs</a></li>
+            <li><a href="/internships">Internships</a></li>
+            <li><a href="/jobs">Jobs</a></li>
             <li><a href="">Scholarships</a></li>
-            <li><a href="">Dashboard</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
         </ul>
     </div>
 
